# uav-nav-obstacle-avoidance-rl

./: .gitignore  LICENSE  README.md  config-defaults.yaml  pyproject.toml
notebooks/: analyse_env.ipynb  record_video_episodes.ipynb  trajectory_examples.ipynb
notebooks/.ipynb_checkpoints/: analyse_env-checkpoint.ipynb
reports/examples/: UAV_trajectory_0_250000_879b8508a17ebdb4c694.html  UAV_trajectory_2_300000_8c445daa54457e7b2f95.html
uav_nav_obstacle_avoidance_rl/: config.py
uav_nav_obstacle_avoidance_rl/environment/: cam_wrapper.py  flaten_wrapper.py  lidar_observation_wrapper.py  lidar_wrapper.py  normalize_obs_wrapper.py  occupancy_grid.py  reward_wrapper.py  vector_voyager_env.py  voxel_grid.py
uav_nav_obstacle_avoidance_rl/modeling/: config-defaults.yaml  eval.py  exp-5-sweep.yaml  exp-6-sweep.yaml  seed-sweep.yaml  seed-three.yaml  sweep-config.yaml  train.py
uav_nav_obstacle_avoidance_rl/scripts/: debug_env.py  record_video.py
uav_nav_obstacle_avoidance_rl/test/: base_env_test.py  env_test.py  lidar_test.py
uav_nav_obstacle_avoidance_rl/utils/: curriculum_callback.py  custom_callbacks.py  env_factory.py  env_helpers.py  eval_metrics_callback.py  full_metrics_callback.py  metrics_callback.py  train_metrics_callback.py
